<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Note Taker</string>
    <string name="sharedPreferences">NOTE_TAKE_PREF</string>
    <string name="prefNote">NOTE</string>
    <string name="prefFontSize">FONT_SIZE</string>

    <!-- font families -->
    <string name="fontFamilyRegular">sans-serif</string>
    <string name="fontFamilyLight">sans-serif-light</string>

    <string name="noteHint">Your note</string>
    <string name="sure">Are you sure?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="eraseAll">Erase All</string>
    <string name="save_close">Save and Close</string>
    <string name="share">Share Notes</string>
    <string name="listen">Listen To Me</string>
    <string name="saveAs">Save As</string>
    <string name="open">Open File</string>
    <string name="fontSize">Font Size</string>
    <string name="voiceRecognitionNotSupported">Voice recognition is not supported in your device</string>

    <string name="grantPermission">Grant permission</string>
    <string name="ok">OK</string>
    <string name="writeError">Problem occurred during writing</string>
    <string name="writeSuccess">Saved successfully</string>
    <string name="save">Save</string>

    <string name="saveAsHint">File Name</string>
    <string name="fileAlreadyExists">File already exists</string>
    <string name="overwrite">OVERWRITE</string>
    <string name="selectFile">Select txt File to Upload</string>
    <string name="uploadError">Upload error</string>
    <string name="mountExternalStorage">Please mount external storage</string>
    <string name="extensionWarning">Please use txt file</string>
    <string name="enterFileName">Enter file name</string>

    <string name="font_size_small">Small</string>
    <string name="font_size_medium">Medium</string>
    <string name="font_size_big">Big</string>

</resources>
