<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/item_size"
        android:title="@string/fontSize"
        android:orderInCategory="6"
        app:showAsAction="never" />

    <item
        android:id="@+id/item_save_as"
        android:title="@string/saveAs"
        android:orderInCategory="5"
        app:showAsAction="never" />

    <item
        android:id="@+id/item_share"
        android:title="@string/share"
        android:orderInCategory="4"
        app:showAsAction="never" />

    <item
        android:id="@+id/item_listen"
        android:title="@string/listen"
        android:orderInCategory="3"
        app:showAsAction="never" />

    <item
        android:id="@+id/item_save"
        android:title="@string/save_close"
        android:icon="@drawable/ic_save"
        android:orderInCategory="2"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/item_delete"
        android:title="@string/eraseAll"
        android:icon="@drawable/ic_delete"
        android:orderInCategory="1"
        app:showAsAction="ifRoom" />

</menu>